kubernetes/apps/qrapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qrapp
  namespace: network
  annotations:
spec:
  selector:
    matchLabels:
      app: qrapp
  replicas: 2
  template:
    metadata:
      labels:
        app: qrapp
    spec:
      containers:
      - name: qrapp
        image: therealsojay/qrcodeapp:1.0.61
