kubernetes/apps/qrapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qrapp-svc
  namespace: qrapp
spec:
  selector:
    app: qrapp
  ports:
  - name: http
    port: 80
    targetPort: 5001
  - name: https
    port: 443
    targetPort: 5001
  type: LoadBalancer
