kubernetes/apps/qrapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: external.samboxlab.top
  generation: 1
  labels:
    kustomize.toolkit.fluxcd.io/name: qrcode-app
    kustomize.toolkit.fluxcd.io/namespace: flux-system
  name: qrapp
  namespace: qrapp
spec:
  ingressClassName: external
  rules:
  - host: qrcode.samboxlab.top
    http:
      paths:
      - backend:
          service:
            name: qrapp-svc  # Ensure the correct service name
            port:
              number: 80  # Since you have LoadBalancer service mapping 80 to 5001
        path: /
        pathType: Prefix
  tls:
    - hosts:
      - qrcode.samboxlab.top
      secretName: samboxlab-top-production-tls
